--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mochila de viagem</title>
+    <title>Backpack</title>
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,19 +12,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <main class="conteudo">
+    <main class="content">
         <div class="principal">
-            <div class="mochila"></div>
-            <form action="" class="adicionar" id="novoItem">
-                <label for="item">Nome</label>
-                <input type="text" name="nome" id="nome">
+            <div class="backpack"></div>
+            <form action="" class="add" id="newItem">
+                <label for="item">Name</label>
+                <input type="text" name="name" id="name">
                 <label for="item">Quantidade</label>
-                <input type="number" name="quantidade" id="quantidade">
-                <input type="submit" value="Adicionar" class="cadastrar">
+                <input type="number" name="quantity" id="quantity">
+                <input type="submit" value="Add" class="register">
             </form>
         </div>
         
-        <ul class="lista">
+        <ul class="list">
             <li class="item"><strong>7</strong>Camisas</li>
             <li class="item"><strong>1</strong>Calça</li>
             <li class="item"><strong>3</strong>Casaco</li>
