--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <form action="" class="add" id="newItem">
                 <label for="item">Name</label>
                 <input type="text" name="name" id="name">
-                <label for="item">Quantidade</label>
+                <label for="item">Quantity</label>
                 <input type="number" name="quantity" id="quantity">
                 <input type="submit" value="Add" class="register">
             </form>
