--- a/index.html
+++ b/index.html
@@ -25,14 +25,7 @@
             </form>
         </div>
         
-        <ul class="list" id="list">
-            <li class="item"><strong>7</strong>Camisas</li>
-            <li class="item"><strong>1</strong>Calça</li>
-            <li class="item"><strong>3</strong>Meia</li>
-            <li class="item"><strong>10</strong>Cuecas</li>
-            <li class="item"><strong>1</strong>Celular</li>
-            <li class="item"><strong>1</strong>Carregador</li>
-        </ul>
+        <ul class="list" id="list"></ul>
     </main>
 
     <script src="script.js"></script>
